[metadata]
name = data-exploration-analysis
version = 3.1.2
description = Data exploration is the initial step in data analysis, where users explore a large data set in an unstructured way to uncover initial patterns, characteristics, and points of interest.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christiangarcia0311/data-exploration-analysis
author = Christian Garcia
author_email = iyaniyan03112003@gmail.com
license = MIT

[options]
packages = find:
